--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ title: Posts
 {% for post in paginator.posts %}
   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
   <p class="author">
+    <span class="date">{{ post.date | date: "%B %-d, %Y" }}</span>
     <span class="date">{{ post.date }}</span>
   </p>
   <div class="content">
